add .col-width and gutter and remove margin left and margin right from row gallery 1 col-md-2. add margin at bottom.

--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -78,26 +78,26 @@
       </div>
     </div>
     <div class="row-gallery-1">
-      <div class="col-md-2"></div>
+      <div class="col-md-2 gutter"></div>
       <div class="col-md-8">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
@@ -105,26 +105,26 @@
       </div>
     </div>
     <div class="row-gallery-1">
-      <div class="col-md-2"></div>
+      <div class="col-md-2 gutter"></div>
       <div class="col-md-8">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
@@ -132,26 +132,26 @@
       </div>
     </div>
     <div class="row-gallery-1">
-      <div class="col-md-2"></div>
+      <div class="col-md-2 gutter"></div>
       <div class="col-md-8">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 col-width">
             <img src="../assets/gray-square-background.png" class="img-responsive">
             <img src="../assets/about-us-img.png" class="img-responsive blank-img">
           </div>
