Fix contact box

--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -104,8 +104,9 @@
       <div class="form-group">
         <p><textarea name="message" type="text" placeholder="Your Message" rows="4"></textarea><p>
       </div>
-      <button class= "btn btn-default">SEND MESSAGE</button>
-      <div class="empty-text col-md-8">
+      <button class="btn btn-default">SEND MESSAGE</button>
+    </div>
+      <div class="col-md-8 empty-text">
         <p><textarea name="empty" type="text" rows="8"></textarea><p>
       </div>
     </main>
@@ -116,7 +117,7 @@
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
+          <a class="text" href="#">Read More<i class="fa fa-caret-right"></i></a>
         </div>
         <div class="col-md-2 hotel">
           <h4>NortSea Hotel</h4>
