--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body background="../assets/background-texture.png">
+<body>
   <div class="container-fluid">
     <!-- Header -->
     <header class="row" id="header-module">
@@ -21,14 +21,14 @@
       <div class="col-md-8">
         <nav class="navbar navbar-inverse">
           <ul class="nav navbar-nav">
-            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
-            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
-            <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
-            <li><a href="#">EN <span class="caret"></span></a></li>
-            <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
-            <li><a href="#" class="fa fa-twitter" alt="twitter logo"></a></li>
-            <li><a href="#" class="fa fa-instagram" alt="instagram logo"></a></li>
-            <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
+            <li><a href="javascript:void(0);"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
+            <li><a href="javascript:void(0);"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+            <li class="dropdown"><a href="javascript:void(0);">Log In <span class="caret"></span></a></li>
+            <li><a href="javascript:void(0);">EN <span class="caret"></span></a></li>
+            <li><a href="javascript:void(0);" class="fa fa-facebook" alt="facebook logo"></a></li>
+            <li><a href="javascript:void(0);" class="fa fa-twitter" alt="twitter logo"></a></li>
+            <li><a href="javascript:void(0);" class="fa fa-instagram" alt="instagram logo"></a></li>
+            <li><a href="javascript:void(0);" class="fa fa-envelope" alt="envelope logo"></a></li>
           </ul>
           <ul class="nav navbar-nav">
             <li><a href="../index.html">Home</a></li>
@@ -37,7 +37,7 @@
             <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
             <li><a class="active" href="../pages/04-gallery.html">Gallery</a></li>
             <li><a href="../pages/03-contact.html">Contact</a></li>
-            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+            <li><a href="javascript:void(0);"><i class="fa fa-search" aria-hidden="true"></i></a></li>
           </ul>
         </nav>
       </div>
@@ -166,7 +166,7 @@
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
+          <a class="text" href="javascript:void(0);">Read More  <i class="fa fa-caret-right"></i></a>
         </div>
         <div class="col-md-2 hotel">
           <h4>NortSea Hotel</h4>
@@ -183,10 +183,10 @@
               <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p href="#">Address:</p>
+              <p>Address:</p>
             </div>
             <div class="col-md-7 information">
-              <p href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
+              <p>1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
             </div>
           </div>
           <div><p class="border-line"></p></div>
@@ -195,10 +195,10 @@
               <p><i class="fa fa-phone" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p href="#">Phone:</p>
+              <p>Phone:</p>
             </div>
             <div class="col-md-7 information">
-              <p href="#">+4401233123208</p>
+              <p>+4401233123208</p>
             </div>
           </div>
           <div><p class="border-line"></p></div>
@@ -207,10 +207,10 @@
               <p><i class="fa fa-send" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p href="#">Email:</p>
+              <p>Email:</p>
             </div>
             <div class="col-md-7 information">
-              <p href="#">support@nortsea.com</p>
+              <p>support@nortsea.com</p>
             </div>
           </div>
           <div><p class="border-line"></p></div>
@@ -219,10 +219,10 @@
               <p><i class="fa fa-compass" aria-hidden="true"></i></p>
             </div>
             <div class="col-md-2 contact-type">
-              <p class="contact-type" href="#">GPS:</p>
+              <p class="contact-type">GPS:</p>
             </div>
             <div class="col-md-8 information">
-              <p href="#">10.021211-118.469009</p>
+              <p>10.021211-118.469009</p>
             </div>
           </div>
         </div>
