--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -85,6 +85,7 @@
         <button class="btn-read-more btn-default" role="button">Read More</button>
       </div>
     </div>
+  </div>
     <div class="row two news-cards">
       <div class="col-md-2 t-unique-box">
         <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
