Changed width June banner from fixed to 100% and added padding-right: 2% - rest is original team's code

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -56,7 +56,7 @@
           <h4 class="h4-june-text">Narwhal tofu tacos cred, wayfarers unicorn chillwave. Four loko</h4>
           <p class="june-text">Date: 05,June,2015</p>
           <p class="june-text-two">air plant, migas copper mug kickstarter street art hammock subway tile. <br>Man bun cray bitters umami synth, jean shorts adaptogen chia mlkshk hashtag. Small</br></p>
-          <div class="june-img-dots">
+          <div class="june-img-dots pull-right">
             <img src="../assets/vertical-indicators.png">
           </div>
         </div>
