--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -63,8 +63,11 @@
   <!-- News Cards Section -->
         <div class="row news-cards">
           <div class="col-md-2 t-box">
-            <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-            <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+            <a class="thumbnail">
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img" alt="mtn icon"></img>
+            </a>
+             <!-- <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
             <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
             <p class="date">Date: 05, June, 2015</p>
             <div class="border-line"></div>
@@ -72,8 +75,11 @@
             <button class="btn-read-more btn-default" role="button">Read More</button>
           </div>
           <div class="col-md-2 t-box">
-            <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-            <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+            <a class="thumbnail">
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img" alt="mtn icon"></img>
+            </a>
+             <!-- <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
             <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
             <p class="date">Date: 05, June, 2015</p>
             <div class="border-line"></div>
@@ -81,8 +87,11 @@
             <button class="btn-read-more btn-default" role="button">Read More</button>
           </div>
           <div class="col-md-2 t-box">
-            <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-            <img src="../assets/play-btn.png" class="img-responsive press-play" alt="play-btn"></img>
+            <a class="thumbnail">
+             <img src="../assets/play-btn.png" class="img-responsive press-play"></img>
+            </a>
+             <!-- <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+             <img src="../assets/play-btn.png" class="img-responsive play-btn" alt="press-play"></img> -->
             <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
             <p class="date">Date: 05, June, 2015</p>
             <div class="border-line"></div>
@@ -97,8 +106,11 @@
             <button class="unique-btn-read-more btn-default" role="button">Read More</button>
           </div>
           <div class="col-md-2 t-box">
-            <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-            <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+            <a class="thumbnail">
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img" alt="mtn icon"></img>
+            </a>
+             <!-- <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
             <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
             <p class="date">Date: 05, June, 2015</p>
             <div class="border-line"></div>
@@ -106,8 +118,11 @@
             <button class="btn-read-more btn-default" role="button">Read More</button>
           </div>
           <div class="col-md-2 t-box">
-            <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-            <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+            <a class="thumbnail">
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img" alt="mtn icon"></img>
+            </a>
+             <!-- <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+             <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
             <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
             <p class="date">Date: 05, June, 2015</p>
             <div class="border-line"></div>
