All good - left team code in tact with small changes to css file top-paragraph class not being read in popular-recent column css code

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -101,9 +101,9 @@
         </div>
         <div class="row news-cards">
           <div class="col-md-2 t-unique-box">
-            <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
-            <p class="unique-date">Date: 06, Feb, 2015</p>
-            <button class="unique-btn-read-more btn-default" role="button">Read More</button>
+          <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
+          <p class="unique-date">Date: 06, Feb, 2015</p>
+          <button class="unique-btn-read-more btn-default" role="button">Read More</button>
           </div>
           <div class="col-md-2 t-box">
             <a class="thumbnail">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="row news-cards">
-          <button class="col-md-4 btn-view-all btn-default" role="button">View All</button>
+          <button class="btn-view-all btn-default btn-block" role="button">View All &ensp;<i class="fa fa-angle-right"></i></button>
         </div>
       </div>
 
