fix assets to be the assets folder pngs instead of the URLs from icons8 website.

--- a/pages/09-services.html
+++ b/pages/09-services.html
@@ -86,7 +86,7 @@
       </div>
       <div class="col-md-2">
         <div class="demo-icon fridge-icon">
-          <img src="https://png.icons8.com/metro/18/ffffff/fridge.png">
+          <img src="../assets/fridge.png">
         </div>
         <p class="text-center demo-icon-desc"> Fridge</p>
       </div>
@@ -102,19 +102,19 @@
       <div class="col-md-3"></div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class= "air-conditioner" src="https://png.icons8.com/metro/50/ffffff/fan.png">
+          <img class= "air-conditioner" src="../assets/fan.png">
         </div>
         <p class="text-center demo-icon-desc"> Air conditioning</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="washing-machine" src="https://png.icons8.com/windows/18/ffffff/washing-machine.png">
+          <img class="washing-machine" src="../assets/washing-machine.png">
         </div>
         <p class="text-center demo-icon-desc"> Washing machine</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="parking" src="https://png.icons8.com/metro/18/ffffff/parking.png">
+          <img class="parking" src="../assets/parking.png">
         </div>
         <p class="text-center demo-icon-desc"> Free parking</p>
       </div>
@@ -124,19 +124,19 @@
       <div class="col-md-3"></div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="swimming" src="https://png.icons8.com/ios-glyphs/18/ffffff/swimming.png">
+          <img class="swimming" src="../assets/swimming.png">
         </div>
         <p class="text-center demo-icon-desc"> Swimming pool</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="phone" src="https://png.icons8.com/material/18/ffffff/phone.png">
+          <img class="phone" src="../assets/phone.png">
         </div>
         <p class="text-center demo-icon-desc"> Room service</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="hair-dryer" src="https://png.icons8.com/ios-glyphs/18/ffffff/hair-dryer.png">
+          <img class="hair-dryer" src="../assets/hair-dryer.png">
         </div>
         <p class="text-center demo-icon-desc"> Hair dryer</p>
       </div>
@@ -152,13 +152,13 @@
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="futbol" src="https://png.icons8.com/metro/18/ffffff/football2.png">
+          <img class="futbol" src="../assets/football2.png">
         </div>
         <p class="text-center demo-icon-desc"> Childcare</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="bar" src="https://png.icons8.com/metro/18/ffffff/cocktail.png">
+          <img class="bar" src="../assets/cocktail.png">
         </div>
         <p class="text-center demo-icon-desc"> Bar</p>
       </div>
@@ -168,19 +168,19 @@
       <div class="col-md-3"></div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="fitness" src="https://png.icons8.com/metro/18/ffffff/dumbbell.png">
+          <img class="fitness" src="../assets/dumbbell.png">
         </div>
         <p class="text-center demo-icon-desc"> Fitness equipment</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="safe" src="https://png.icons8.com/windows/18/ffffff/safe.png">
+          <img class="safe" src="../assets/safe.png">
         </div>
         <p class="text-center demo-icon-desc"> Reception safe</p>
       </div>
       <div class="col-md-2">
         <div class="demo-icon">
-          <img class="tv" src="https://png.icons8.com/android/18/ffffff/retro-tv.png">
+          <img class="tv" src="../assets/retro-tv.png">
         </div>
         <p class="text-center demo-icon-desc"> TV</p>
       </div>
