remove black space and adjust margins in contacts page to update h1, about-us-desc, desc-about-us, desc-about-content, and text right.

--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -45,29 +45,20 @@
     <!-- About Us -->
     <div class="row about-us-back">
       <div class="col-md-2"></div>
-      <div class="col-md-7">
+      <div class="col-md-6">
         <h1 class="text-left left-title">Contact</h1>
       </div>
-      <div class="col-md-3">
-        <p class="text-right">Home / Pages / About Us</p>
+      <div class="col-md-2">
+        <p class="text-right">Home / Pages / Contact</p>
       </div>
-    </div>
-    <div class="row about-us-back black-space">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
     </div>
     <div class="row about-us-back">
       <div class="col-md-2"></div>
-      <div class="col-md-8">
+      <div class="col-md-8 desc-about-content">
         <h1 class=" text-center about-us-desc"><strong>WHERE WE ARE</strong></h1>
           <p class="text-center desc-about-us"><strong><em>1300 Blvd Santa Monica, CA 24051 United States.</em></strong></p>
           <p class="text-center desc-about-us desc-about-content"><em>02563234234</em></p>
       </div>
-    </div>
-    <div class="row about-us-back black-space">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
       <div class="col-md-2"></div>
     </div>
     <main class="row info contact-feed">
